# rtm3d-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md
artifacts/: migrated_inline.pgm  synthetic_migrated_inline.bin.json
configs/: marmousi_quickstart.json  synthetic_benchmark.json
data/: SHA256SUMS.txt
data/synthetic/: shot_0001.segy_like  shot_0001_gather.bin.json  vel.json  velocity_model.bin.json  x.json  z.json
docs/: ARCHITECTURE.md  BENCHMARK_3D_OPTIONS.md  DATA_PROVENANCE.md  DEVITO_INPUT_IDEAS.md  RTM_REFERENCE_NOTES.md  SYNTHETIC_BENCHMARK.md  VALIDATION.md
include/rtm3d/: ImageIO.hpp  MarmousiLoader.hpp  RtmEngine.hpp  Volume3D.hpp
include/rtm3d/cli/: CliOptions.hpp
include/rtm3d/core/: Volume3D.hpp
include/rtm3d/io/: ArrayModelLoader.hpp  GridModelLoader.hpp  ImageIO.hpp
include/rtm3d/model/: GridModel2D.hpp
include/rtm3d/rtm/: RtmEngine.hpp
output/: migrated_inline.bin.json  migrated_inline.pgm  test_inline.bin.json  test_inline.pgm
scripts/: download_marmousi.sh  float32_to_png.py  generate_synthetic_model.py  pgm_to_png.py  visualize_synthetic.py
src/: ImageIO.cpp  MarmousiLoader.cpp  RtmEngine.cpp  main.cpp
src/cli/: CliOptions.cpp
src/io/: ArrayModelLoader.cpp  GridModelLoader.cpp  ImageIO.cpp
src/rtm/: Boundary.cpp  Boundary.hpp  Geometry.cpp  Geometry.hpp  Imaging.cpp  Imaging.hpp  Propagation.cpp  Propagation.hpp  RtmEngine.cpp
tests/: e2e_synthetic.sh  test_array_loader_edge.cpp  test_array_model_loader.cpp  test_cli_options.cpp  test_cli_validation_extra.cpp  test_image_io.cpp  test_main.cpp  test_rtm_edge.cpp  test_rtm_engine.cpp
